# minions

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
configs/dataset_normalization/: wikipedia_bookscorpus.yaml
configs/dataset_prep/: bookscorpus.yaml  wikipedia.yaml
crammers/layers/: attention.py  ffn.py
crammers/models/: __init__.py
crammers/models/bert/: bert.py  config.py
crammers/optimizers/: scheduled_optimizer.py
scripts/: test_bert.py
scripts/data/bert_pretraining_data/: README.md  bert_pretraining_data.py  language_detector.py  normalize.py  preprocess.py  publish_dataset_to_hf_hub.py  text_chunker.py  text_normalizer.py
tests/: test_bert.py
